packages/pug-lexer/test/errors/else-with-condition.pug
if true
  .foo
else false
  .bar